<resources>
    <string name="app_name">重邮幼儿园</string>
    <string name="action_settings">设置</string>
    <string name="press_back_twice">再按一次返回键退出</string>

    <string name="tips">提示</string>
    <string name="cancle">取消</string>
    <string name="confrim">确认</string>
    <string name="permission_desc">为了应用可以正常使用，请您点击确认申请权限。</string>
    <string name="action_permissions">Permissions</string>
    <string name="action_dialog">Dialog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">请输入你的手机号</string>
    <string name="et_password">请输入密码</string>
    <string name="find_the_password">找回密码?</string>
    <string name="registered">注册</string>
    <string name="login">登录</string>
    <string name="title_news">资讯</string>
    <string name="et_name">请输入您的昵称</string>
    <string name="register_phone">请输入幼儿园预留手机号</string>
    <string name="et_passwordComfire">请确认密码</string>
    <string name="verification">请输入验证码</string>
    <string name="send_verification">发送验证码</string>
    <string name="title_activity_news">公告与新闻</string>
    <string name="title_fragment_class">班级</string>
    <string name="title_activity_news_detail">详情</string>
    <string name="title_activity_news_knowledge">成长知识</string>
    <string name="large_text"></string>
    <string name="kindergarten_url">119.29.225.59:8080</string>

    <item name="video_adapter_before_state" type="id" />
    <item name="video_adapter_position" type="id" />
    <item name="recycler_item_position_tag" type="id" />
</resources>
